--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ nav ul li a:hover {
 /* Adjust spacing for smaller devices */
 @media (max-width: 768px) {
   .hero-box {
-    margin-top: 40px; /* smaller gap on mobile */
+    margin-top: 20px; /* smaller gap on mobile */
   }
 }
 
@@ -153,4 +153,18 @@ nav ul li a:hover {
   .hero-box {
     margin-left: 8rem; /* more space on big screens */
   }
+
+  .hero-box p {
+      margin-bottom: 2rem; /* adds gap below the paragraph */
+      margin-left: 3rem;
+      font-size: clamp(1rem, 2.5vw, 1.5rem);
+    }
+
+    .hero-box h1 {
+      font-size: clamp(3rem, 5vw, 3rem);
+    }
+
+    .hero-box button {
+      margin-top: 1rem; /* optional: adds gap above button */
+    }
 }
